--- a/fonte.html
+++ b/fonte.html
@@ -9,7 +9,13 @@
 <body>
     <h1>O que é fonte de alimentação</h1>
     <h2>
-        
+        Fonte de alimentação linear.
+    </h2>
+    <h2>
+        Fonte de alimentação capacitiva
+    </h2>
+    <h2>
+        Fonte de alimentação comutada.
     </h2>
     
 </body>
