feito a parte de fontes de alimentação

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
       </header>
    
         
-    <main></main>
+    <main>
+
+     <ul>
+          <li><a href="#">Fonte de energia</a></li>     
+      </ul>
+
+    </main>
 
     <footer>
         <h2>Integrantes:</h2>
