caixa de som e fonte

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <label class="mobile-icon" for="mobile-btn"><span class="hamburguer"></span></label>
           
           <ul class="nav">
-            <li><a href="#" title="Home">Fonte de energia</a></li>
-            <li><a href="#" title="Sobre">Caixa de Som</a></li>
+            <li><a href="fonte.html" title="Home">Fonte de energia</a></li>
+            <li><a href="caixa.html" title="Sobre">Caixa de Som</a></li>
           
           </ul>
         </div>
