--- a/caixa.html
+++ b/caixa.html
@@ -67,11 +67,8 @@
     </main>
 
     <footer>
-        <h2>Integrantes:</h2>
-    <h3><a href="https://github.com/lucastuia">Lucas O.Gonçalves</a></h3>
-    <h3><a href="https://github.com/LeonardoGStrey">Leonardo G.strey</a></h3>
-    <h3><a href="https://github.com/PortaSeAbrindo">Matheus Amaro V.</a></h3>
-    <h3><a href="https://github.com/PRUVINELLI123">Pedro Pruvinelli U.</a></h3>
+    <a href="index.html"><button><h2>Página inicial</h2></button></a>
+    <a href="fonte.html"><button><h2>Fontes de alimentação</h2></button></a>
     </footer>
 
 </body>
