--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
       <footer>
         <h2>Integrantes:</h2>
-        <h3><a href="https://github.com/lucastuia">Lucas O.Gonçalves</a></h3>
-        <h3><a href="https://github.com/LeonardoGStrey">Leonardo G.strey</a></h3>
-        <h3><a href="https://github.com/PortaSeAbrindo">Matheus Amaro V.</a></h3>
-        <h3><a href="https://github.com/PRUVINELLI123">Pedro Pruvinelli U.</a></h3>
+        <h3><li><a href="https://github.com/lucastuia">Lucas O.Gonçalves</a></li></h3>
+        <h3><li><a href="https://github.com/LeonardoGStrey">Leonardo G.strey</a></li></h3>
+        <h3><li><a href="https://github.com/PortaSeAbrindo">Matheus Amaro V.</a></li></h3>
+        <h3><li><a href="https://github.com/PRUVINELLI123">Pedro Pruvinelli U.</a></li></h3>
+        <br>
+        <h4>Senac Distrito Criativo, 2024.</h4>
     </footer>
 
 
