--- a/index.html
+++ b/index.html
@@ -4,15 +4,117 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hardware</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    :root{
+      --color-white: #fff;
+      --color-dark1: #272727;
+      --color-dark2: #2d2d2d;
+      --color-dark3: #414141;
+      --color-dark4: #1c1c1c;
+      --color-dark5: #343434;
+      --color-purple:#b040ff; 
+    }
+    *{
+      margin: 0;
+      padding: 0;
+    }
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #272727;
+      color: var(--color-white);
+    }
+    img{
+      width: 45px;
+    }
+    .header,
+    .navigation_header
+    {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+    .header{
+      background-color: var(--color-dark2);
+      box-shadow: 1px 1px 4px var(--color-dark4);
+      height: 56px;
+      justify-content: space-between;
+      padding: 0 10%;
+    }
+    .navigation_header{
+      gap: 3em;
+      z-index: 2;
+    }
+    .navigation_header a{
+      text-decoration: none;
+      color: var(--color-purple);
+      transition: 1s;
+      font-weight: bold;
+    }
+    .active{
+      background-color: var(--color-dark3);
+      padding: 10px;
+      border-radius: 10px;
+    }
+    .content{
+      text-align: center;
+      padding-top: 5em;
+      height: 100vh;
+      transition: 1s;
+    }
+    .btn_icon_header{
+      background-color: transparent;
+      border: none;
+      color: var(--color-white);
+      cursor: pointer;
+      display: none;
+    }
+    @media screen and (max-width:768px){
+      .btn_icon_header{
+        display: block;
+      }
+      .navigation_header{
+        position: absolute;
+        flex-direction: column;
+        top: 0;
+        background-color: var(--color-dark5);
+        height: 100%;
+        width: 35vw;
+        padding: 1em;
+        animation-duration: 1s;
+        margin-left: -100vw;
+      }
+    }
+    @keyframes showSidebar {
+      from {margin-left: -100vw;}
+      top {margin-left: -10vw;}
+    }
+  </style>
 </head>
 <body>
-      <header>
-        <h1>a</h1>
-      </header>
+    <div class="header" id="header">
+      <button onclick="toggSidebar()" class="`btn_icon_header">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+        </svg>
+      </button>
+      <div class="logo_header">
+        <img src="https://w7.pngwing.com/pngs/829/293/png-transparent-computer-cases-housings-personal-computer-computer-icons-computer-monitors-logo-technology-computer-computer-network-rectangle-logo.png" alt="logo">
+      </div>
+      <div class="navigation_header">
+        <button onclick="toggSidebar()" class="btn_icon_header">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+          </svg>
+        </button>
+        <a href="#" class="active">Fonte de energia </a>
+        <a href="#">Caixa de som</a>
+      </div>
+    </div>
+    <div class="content" id="content">
+      <h1>Hardware</h1>
+    </div>
 
-
-      <main>
+  <main>
         <h2>b</h2>
       </main>
 
@@ -28,4 +130,26 @@
 
 
 </body>
+<script>
+      var header = document.getElementById('header');
+      var navigationHeader = document.getElementById('navigation_header');
+      var content = document.getElementById('content');
+      var showSidebar = false;
+
+      function toggSidebar()
+      {
+        showSidebar = !showSidebar;
+        if(showSidebar)
+        {
+          navigationHeader.style.marginLeft = '-10vw';
+          navigationHeader.style.animationName = 'showSidebar';
+          content.style.filter = 'blur(2px)';
+        }
+        else
+        {
+          navigation.style.marginLeft = '-100vw';
+          navigationHeader.style.animationName = '';
+        }
+      }
+</script>
 </html>
