--- a/index.html
+++ b/index.html
@@ -4,91 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hardware</title>
-  <style>
-    :root{
-      --color-white: #fff;
-      --color-dark1: #272727;
-      --color-dark2: #2d2d2d;
-      --color-dark3: #414141;
-      --color-dark4: #1c1c1c;
-      --color-dark5: #343434;
-      --color-purple:#b040ff; 
-    }
-    *{
-      margin: 0;
-      padding: 0;
-    }
-    body{
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #272727;
-      color: var(--color-white);
-    }
-    img{
-      width: 45px;
-    }
-    .header,
-    .navigation_header
-    {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    .header{
-      background-color: var(--color-dark2);
-      box-shadow: 1px 1px 4px var(--color-dark4);
-      height: 56px;
-      justify-content: space-between;
-      padding: 0 10%;
-    }
-    .navigation_header{
-      gap: 3em;
-      z-index: 2;
-    }
-    .navigation_header a{
-      text-decoration: none;
-      color: var(--color-purple);
-      transition: 1s;
-      font-weight: bold;
-    }
-    .active{
-      background-color: var(--color-dark3);
-      padding: 10px;
-      border-radius: 10px;
-    }
-    .content{
-      text-align: center;
-      padding-top: 5em;
-      height: 100vh;
-      transition: 1s;
-    }
-    .btn_icon_header{
-      background-color: transparent;
-      border: none;
-      color: var(--color-white);
-      cursor: pointer;
-      display: none;
-    }
-    @media screen and (max-width:768px){
-      .btn_icon_header{
-        display: block;
-      }
-      .navigation_header{
-        position: absolute;
-        flex-direction: column;
-        top: 0;
-        background-color: var(--color-dark5);
-        height: 100%;
-        width: 35vw;
-        padding: 1em;
-        animation-duration: 1s;
-        margin-left: -100vw;
-      }
-    }
-    @keyframes showSidebar {
-      from {margin-left: -100vw;}
-      top {margin-left: -10vw;}
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header" id="header">
@@ -106,15 +22,15 @@
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
           </svg>
         </button>
-        <a href="#" class="active">Fonte de energia </a>
+        <a href="#" class="active">Fonte de alimentação</a>
         <a href="#">Caixa de som</a>
       </div>
     </div>
-    <div class="content" id="content">
-      <h1>Hardware</h1>
+    <div tabindex="0" onclick="closeSidebar" class="content" id="content">
+      <h1>Hardware - Fonte de alimentação e caixa de som</h1>
     </div>
 
-  <main>
+      <main>
         <h2>b</h2>
       </main>
 
@@ -145,7 +61,7 @@
         {
           navigationHeader.style.marginLeft = '-10vw';
           navigationHeader.style.animationName = 'showSidebar';
-          content.style.filter = 'blur(2px)';
+          content.style.filter = '';
         }
         else
         {
@@ -153,5 +69,22 @@
           navigationHeader.style.animationName = '';
         }
       }
+
+      function closeSidebar()
+      {
+        if(showSidebar)
+        {
+          toggSidebar();
+        }
+      }
+      window.addEventListener('resize', function(event) {
+          if(window.innerWidth > 768 && showSidebar)
+          {
+            toggSidebar();
+          }
+      });
+
+
+      
 </script>
 </html>
