--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </svg>
         </button>
         <a href="#" class="active">Fonte de alimentação</a>
-        <a href="#">Caixa de som</a>
+        <a href="#" class="active">Caixa de som</a>
       </div>
     </div>
     <div tabindex="0" onclick="closeSidebar" class="content" id="content">
@@ -84,7 +84,5 @@
           }
       });
 
-
-      
 </script>
 </html>
