finalização do header

--- a/caixa.html
+++ b/caixa.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Fonte de Energia e Caixa de Som </h1>
+        <h1>Caixa de Som? </h1>
         <div class="content">
         </div>
     </header>
