--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main>
     <div class="header" id="header">
       <button onclick="toggSidebar()" class="`btn_icon_header">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -22,18 +23,17 @@
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
           </svg>
         </button>
-        <a href="#" class="active">Fonte de alimentação</a>
-        <a href="#">Caixa de som</a>
+        <a href="fonte.html" class="active">Fonte de alimentação</a>
+        <a href="caixa.html">Caixa de som</a>
       </div>
     </div>
     <div tabindex="0" onclick="closeSidebar" class="content" id="content">
       <h1>Hardware - Fonte de alimentação e caixa de som</h1>
+      <a href="caixa.html"><h2>Caixa de som</h2></a>
+      <img src="https://m.media-amazon.com/images/I/51LH7KzF0zL._AC_SX679_.jpg" alt="" id="foto">
+      <a id="link" href="https://www.amazon.com.br/Edifier-MONITOR-%C3%81UDIO-MR4-PRETO/dp/B09FX5FZ6Y/ref=asc_df_B09FX5FZ6Y/?hvadid=379708086870&hvdev=c&hvdvcmdl=undefined&hvlocint=undefined&hvlocphy=1001686&hvnetw=g&hvpone=undefined&hvpos=undefined&hvptwo=undefined&hvqmt=undefined&hvrand=8896095232704241217&hvtargid=pla-1596211566465&linkCode=df0&mcid=8e766b7f166c3474b91c4246f843c3b7&tag=googleshopp00-20&th=1"><h2>Onde comprar?</h2></a>
     </div>
-
-      <main>
-        <h2>b</h2>
-      </main>
-
+</main>
 
       <footer>
         <h2>Integrantes:</h2>
