--- a/caixa.html
+++ b/caixa.html
@@ -12,7 +12,7 @@
         <h1>Fonte de Energia e Caixa de Som </h1>
         
 
-        <h1>Caixa de Som? </h1>
+        
         <div class="content">
         </div>
 
@@ -20,8 +20,10 @@
 
     <main>
         <div>
+            <h1>Caixa de Som</h1>
+            <br>
         <h2>
-            Como funciona a caixa de som 
+            Como funciona a caixa de som? 
         </h2>
 
         <p>
@@ -31,7 +33,7 @@
             Além de se conectar ao drive CD-ROM, essa placa possui uma porta de saída de áudio, permitindo a obtenção de sinais de áudio em dois canais (estéreo) através de um conector de áudio.
         </p>
             <br>
-        <img src="https://www.newtoncbraga.com.br/images/stories/artigos11/art0886_01.jpg" alt="">
+        <img src="https://www.newtoncbraga.com.br/images/stories/artigos11/art0886_01.jpg" alt="" id="img2">
         </div>
 
         <div>
