--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       <h1>Hardware - Fonte de alimentação e caixa de som</h1>
       <h2><a href="caixa.html">Caixa de som</a></h2>
       <a href="https://www.amazon.com.br/Edifier-MONITOR-%C3%81UDIO-MR4-PRETO/dp/B09FX5FZ6Y/ref=asc_df_B09FX5FZ6Y/?hvadid=379708086870&hvdev=c&hvdvcmdl=undefined&hvlocint=undefined&hvlocphy=1001686&hvnetw=g&hvpone=undefined&hvpos=undefined&hvptwo=undefined&hvqmt=undefined&hvrand=8896095232704241217&hvtargid=pla-1596211566465&linkCode=df0&mcid=8e766b7f166c3474b91c4246f843c3b7&tag=googleshopp00-20&th=1"><img src="https://m.media-amazon.com/images/I/51LH7KzF0zL._AC_SX679_.jpg" alt="" id="foto"></a>
+      <a href="https://www.ebay.com/itm/285681028553"><img src="https://i.ebayimg.com/images/g/wn8AAOSwoMxl3rVq/s-l960.webp" alt="" id="foto"></a>
+      <h4>Modelo mais recente (2023)</h4> <h4>Modelo mais antigo (1977)</h4>
+      <br> 
+      <br>
+       <h2><a href="fonte.html">Fonte de alimentação</a></h2>
+       <a href="https://www.amazon.com.br/Fonte-200W-Fortrek-Acess%C3%B3rios-Computador/dp/B0755NZ84W/ref=asc_df_B0755NZ84W/?tag=googleshopp00-20&linkCode=df0&hvadid=379787216792&hvpos=&hvnetw=g&hvrand=16348898422803248724&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001686&hvtargid=pla-811517920450&psc=1&mcid=55e538571417323f812b57f08c01d570"><img src="https://m.media-amazon.com/images/I/81bPBIsP2oL._AC_SX679_.jpg" alt="" id="foto2"></a>
+       <a href="https://lista.mercadolivre.com.br/fonte-pc-antiga"><img src="https://http2.mlstatic.com/D_NQ_NP_933191-MLB73247694321_122023-O.webp" alt="" id="foto1"></a>
+       <h4>Modelo mais recente (2023)</h4> <h4>Modelo mais antigo (sem ano exato)</h4>
+    
     </div>
 </main>
 
