--- a/caixa.html
+++ b/caixa.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 
-        <h1>Fonte de Energia e Caixa de Som </h1>
+        <h1>Fonte de Alimentação e Caixa de Som </h1>
         
 
         
