--- a/fonte.html
+++ b/fonte.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Fonte de Energia e Caixa de Som </h1>
+        <h1>Fonte de Alimentação e Caixa de Som </h1>
         
       </header>
 
